Fixed compatibility issues on MacOS.

--- a/paHMM-dist/CMakeLists.txt
+++ b/paHMM-dist/CMakeLists.txt
@@ -37,6 +37,10 @@ file(GLOB SOURCE_PATHS
 
 add_subdirectory(dlib)
 
+# Settings for dlib
+set_property(TARGET dlib PROPERTY CXX_STANDARD 11)
+add_definitions(-DDLIB_NO_GUI_SUPPORT=ON)
+
 add_library(paHMM-dist STATIC ${SOURCE_PATHS} dlib/dlib/all/source.cpp)
 target_link_libraries(paHMM-dist PRIVATE dlib)
 
