--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,9 @@ endif ()
 add_subdirectory(dlib)
 add_subdirectory(paHMM-dist)
 
+# Settings for dlib
+set_property(TARGET dlib PROPERTY CXX_STANDARD 11)
+add_definitions(-DDLIB_NO_GUI_SUPPORT=ON)
 # Because something is turning it on, we have to turn it off:
 add_definitions(-DDLIB_DISABLE_ASSERTS)
 
