--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,5 @@ python/pahmm/*.dylib
 tests/HMM_*
 tests/samples/amino_acid/*.distmat
 tests/samples/nucleotide/*.distmat
+tests/paHMM-dist/paHMM-tree_*
+tests/paHMM-dist/last_run_system.txt
