--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,15 +51,30 @@ else ()
     add_library(pahmm SHARED ${SOURCE_FILES})
 endif ()
 
+# Settings for dlib
+# These settings will disable unused features. You may reintroduce these features,
+# but remember that this might imply more external dependencies which might reduce
+# portability.
+set(DLIB_PNG_SUPPORT OFF)
+set(DLIB_GIF_SUPPORT OFF)
+set(DLIB_JPEG_SUPPORT OFF)
+set(DLIB_USE_BLAS OFF)       # Might impact performance, to use BLAS reenable this.
+set(DLIB_USE_LAPACK OFF)     # Might impact performance, to use LAPACK reenable this.
+set(DLIB_USE_MKL_FFT OFF)    # Might impact performance, to use MKL_FFT reenable this.
+set(DLIB_USE_CUDA OFF)       # Might impact performance, to use CUDA reenable this (Nvidia GPU only).
+set(DLIB_NO_GUI_SUPPORT ON)
+# This MUST be on:
+set(DLIB_DISABLE_ASSERTS ON)
+
 # Add dependencies
 add_subdirectory(dlib)
 add_subdirectory(paHMM-dist)
 
 # Settings for dlib
 set_property(TARGET dlib PROPERTY CXX_STANDARD 11)
-add_definitions(-DDLIB_NO_GUI_SUPPORT)
+#add_definitions(-DDLIB_NO_GUI_SUPPORT)
 # Because something is turning it on, we have to turn it off:
-add_definitions(-DDLIB_DISABLE_ASSERTS)
+#add_definitions(-DDLIB_DISABLE_ASSERTS)
 
 target_link_libraries(pahmm PRIVATE paHMM-dist dlib)
 
