Fixed typos. Removed dependency on symlink.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,12 @@
 cmake_minimum_required(VERSION 3.10)
 
 # Set project name and version
-project(libpahmm LANGUAGES CXX VERSION 0.1.0)
+set(PROJECT_MAJOR_VERSION "0")
+set(PROJECT_MINOR_VERSION "1")
+set(PROJECT_PATCH_VERSION "0")
+set(PROJECT_VERSION_STRING "${PROJECT_MAJOR_VERSION}.${PROJECT_MINOR_VERSION}.${PROJECT_PATCH_VERSION}")
+
+project(libpahmm LANGUAGES CXX VERSION "${LIBPAHMM_VERSION_STRING}")
 
 # Set minimum C++ standard to C++17
 set(CMAKE_CXX_STANDARD 17)
