Small modifications to README.md and .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -81,9 +81,12 @@ dist/*
 python/*.so
 python/pahmm/*.so
 python/pahmm/*.dylib
+python/*.egg-info/*
 tests/HMM_*
 tests/samples/amino_acid/*.distmat
 tests/samples/nucleotide/*.distmat
 tests/paHMM-dist/paHMM-tree_*
 tests/paHMM-dist/last_run_system.txt
 .eggs/*
+wheelhouse/*
+cmake-build-*/*
